# fridge

./: .gitignore  README.md
.github/workflows/: api-server-container.yaml
argo-tes-translator/tes2argo/: README.md  main.py  pyproject.toml
argo-tes-translator/tes2argo/app/: main.py
argo-tes-translator/tes2argo/src/: argo_models.py  main.py  model.py  tes_models.py
argo-tes-translator/tes2argo/tests/: test_task.py
docs/develop/: fridge-api.md  workflows.md
fridge-job-api/: .dockerignore  Dockerfile  pyproject.toml
fridge-job-api/app/: main.py  minio_client.py
infra/aks/: Pulumi.isolated-aks.yaml  __main__.py
infra/aks-confidential-containers/: Pulumi.yaml  __main__.py  requirements.txt
infra/aks-confidential-containers/components/: __init__.py  access_cluster.py  identity.py  isolated_cluster.py  networking.py
infra/aks-post-deployment/: Pulumi.fridge-lockdown.yaml  Pulumi.yaml  __main__.py  requirements.txt
infra/aks-post-deployment/components/: __init__.py  dns_zone.py  firewall.py  network_security_rules.py  stack_outputs.py
infra/aks-post-deployment/enums/: __init__.py
infra/aks/components/: isolated_cluster.py  networking.py
infra/fridge-dual-cluster/isolated-cluster/: __main__.py
infra/fridge/access-cluster/: __main__.py
infra/fridge/components/: __init__.py  (+1 more)
infra/k3s/: install.sh
infra/openstack/: __main__.py  requirements.txt
vm-based/: allowrdp.yml  allowrdpfromguac.yml  ciliumallowpolicy.yml  deny-network-allow-dns.yml  guac-ingress.yml  guac-values.yaml  kubevirt-cr.yaml  kubevirt_setup_guide.md  ubuntu-desktop-lite.yaml  ubuntu-desktop.yaml
vm-based/kv-single-vm/: Chart.yaml  values.yaml
(+39 files in other folders)
