[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fridge-job-api"
version = "0.3.0"
description = "An API for managing and monitoring jobs in the FRIDGE system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.14",
    "kubernetes>=33.1.0",
    "minio>=7.2.16",
    "requests>=2.32.4",
]

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["app"]
